pin bar logic done

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -69,57 +69,102 @@
          "type": "float"
         }
        ],
-       "ref": "310c920c-40a3-431f-8053-a4059bb833dd",
+       "ref": "0d799d69-633b-4278-b31a-049d4de608a3",
        "rows": [
         [
-         "315356",
-         "2025-07-03 19:55:00",
-         "109686.1",
-         "109767.8",
-         "109686.1",
-         "109743.9",
-         "225.817"
+         "0",
+         "2022-07-04 20:15:00",
+         "19851.3",
+         "19853.6",
+         "19719.5",
+         "19776.6",
+         "4522.198"
         ],
         [
-         "315357",
-         "2025-07-03 20:00:00",
-         "109743.8",
-         "109816.9",
-         "109743.8",
-         "109813.6",
-         "172.753"
+         "1",
+         "2022-07-04 20:30:00",
+         "19776.7",
+         "19779.3",
+         "19735.5",
+         "19758.5",
+         "2417.909"
         ],
         [
-         "315358",
-         "2025-07-03 20:05:00",
-         "109813.7",
-         "109837.0",
-         "109784.7",
-         "109836.9",
-         "191.596"
+         "2",
+         "2022-07-04 20:45:00",
+         "19758.5",
+         "19809.2",
+         "19745.7",
+         "19774.4",
+         "2972.344"
         ],
         [
-         "315359",
-         "2025-07-03 20:10:00",
-         "109836.9",
-         "109854.2",
-         "109750.2",
-         "109766.2",
-         "165.509"
+         "3",
+         "2022-07-04 21:00:00",
+         "19774.3",
+         "19790.0",
+         "19740.4",
+         "19789.9",
+         "3271.586"
         ],
         [
-         "315360",
-         "2025-07-03 20:15:00",
-         "109766.2",
-         "109792.4",
-         "109711.2",
-         "109792.4",
-         "85.964"
+         "4",
+         "2022-07-04 21:15:00",
+         "19789.9",
+         "19811.4",
+         "19768.3",
+         "19773.8",
+         "2151.42"
+        ],
+        [
+         "5",
+         "2022-07-04 21:30:00",
+         "19773.8",
+         "19979.7",
+         "19768.0",
+         "19870.9",
+         "6511.104"
+        ],
+        [
+         "6",
+         "2022-07-04 21:45:00",
+         "19870.9",
+         "20033.0",
+         "19870.3",
+         "19946.7",
+         "5781.626"
+        ],
+        [
+         "7",
+         "2022-07-04 22:00:00",
+         "19946.7",
+         "19960.3",
+         "19865.5",
+         "19873.6",
+         "5024.952"
+        ],
+        [
+         "8",
+         "2022-07-04 22:15:00",
+         "19873.7",
+         "19970.0",
+         "19863.3",
+         "19943.1",
+         "3689.065"
+        ],
+        [
+         "9",
+         "2022-07-04 22:30:00",
+         "19943.2",
+         "20100.0",
+         "19926.4",
+         "20016.5",
+         "10324.172"
         ]
        ],
        "shape": {
         "columns": 6,
-        "rows": 5
+        "rows": 10
        }
       },
       "text/html": [
@@ -151,81 +196,369 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>315356</th>\n",
-       "      <td>2025-07-03 19:55:00</td>\n",
-       "      <td>109686.1</td>\n",
-       "      <td>109767.8</td>\n",
-       "      <td>109686.1</td>\n",
-       "      <td>109743.9</td>\n",
-       "      <td>225.817</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-07-04 20:15:00</td>\n",
+       "      <td>19851.3</td>\n",
+       "      <td>19853.6</td>\n",
+       "      <td>19719.5</td>\n",
+       "      <td>19776.6</td>\n",
+       "      <td>4522.198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>315357</th>\n",
-       "      <td>2025-07-03 20:00:00</td>\n",
-       "      <td>109743.8</td>\n",
-       "      <td>109816.9</td>\n",
-       "      <td>109743.8</td>\n",
-       "      <td>109813.6</td>\n",
-       "      <td>172.753</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-07-04 20:30:00</td>\n",
+       "      <td>19776.7</td>\n",
+       "      <td>19779.3</td>\n",
+       "      <td>19735.5</td>\n",
+       "      <td>19758.5</td>\n",
+       "      <td>2417.909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>315358</th>\n",
-       "      <td>2025-07-03 20:05:00</td>\n",
-       "      <td>109813.7</td>\n",
-       "      <td>109837.0</td>\n",
-       "      <td>109784.7</td>\n",
-       "      <td>109836.9</td>\n",
-       "      <td>191.596</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-07-04 20:45:00</td>\n",
+       "      <td>19758.5</td>\n",
+       "      <td>19809.2</td>\n",
+       "      <td>19745.7</td>\n",
+       "      <td>19774.4</td>\n",
+       "      <td>2972.344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>315359</th>\n",
-       "      <td>2025-07-03 20:10:00</td>\n",
-       "      <td>109836.9</td>\n",
-       "      <td>109854.2</td>\n",
-       "      <td>109750.2</td>\n",
-       "      <td>109766.2</td>\n",
-       "      <td>165.509</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-07-04 21:00:00</td>\n",
+       "      <td>19774.3</td>\n",
+       "      <td>19790.0</td>\n",
+       "      <td>19740.4</td>\n",
+       "      <td>19789.9</td>\n",
+       "      <td>3271.586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>315360</th>\n",
-       "      <td>2025-07-03 20:15:00</td>\n",
-       "      <td>109766.2</td>\n",
-       "      <td>109792.4</td>\n",
-       "      <td>109711.2</td>\n",
-       "      <td>109792.4</td>\n",
-       "      <td>85.964</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-07-04 21:15:00</td>\n",
+       "      <td>19789.9</td>\n",
+       "      <td>19811.4</td>\n",
+       "      <td>19768.3</td>\n",
+       "      <td>19773.8</td>\n",
+       "      <td>2151.420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-07-04 21:30:00</td>\n",
+       "      <td>19773.8</td>\n",
+       "      <td>19979.7</td>\n",
+       "      <td>19768.0</td>\n",
+       "      <td>19870.9</td>\n",
+       "      <td>6511.104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2022-07-04 21:45:00</td>\n",
+       "      <td>19870.9</td>\n",
+       "      <td>20033.0</td>\n",
+       "      <td>19870.3</td>\n",
+       "      <td>19946.7</td>\n",
+       "      <td>5781.626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022-07-04 22:00:00</td>\n",
+       "      <td>19946.7</td>\n",
+       "      <td>19960.3</td>\n",
+       "      <td>19865.5</td>\n",
+       "      <td>19873.6</td>\n",
+       "      <td>5024.952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-07-04 22:15:00</td>\n",
+       "      <td>19873.7</td>\n",
+       "      <td>19970.0</td>\n",
+       "      <td>19863.3</td>\n",
+       "      <td>19943.1</td>\n",
+       "      <td>3689.065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2022-07-04 22:30:00</td>\n",
+       "      <td>19943.2</td>\n",
+       "      <td>20100.0</td>\n",
+       "      <td>19926.4</td>\n",
+       "      <td>20016.5</td>\n",
+       "      <td>10324.172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  timestamp      open      high       low     close   volume\n",
-       "315356  2025-07-03 19:55:00  109686.1  109767.8  109686.1  109743.9  225.817\n",
-       "315357  2025-07-03 20:00:00  109743.8  109816.9  109743.8  109813.6  172.753\n",
-       "315358  2025-07-03 20:05:00  109813.7  109837.0  109784.7  109836.9  191.596\n",
-       "315359  2025-07-03 20:10:00  109836.9  109854.2  109750.2  109766.2  165.509\n",
-       "315360  2025-07-03 20:15:00  109766.2  109792.4  109711.2  109792.4   85.964"
+       "             timestamp     open     high      low    close     volume\n",
+       "0  2022-07-04 20:15:00  19851.3  19853.6  19719.5  19776.6   4522.198\n",
+       "1  2022-07-04 20:30:00  19776.7  19779.3  19735.5  19758.5   2417.909\n",
+       "2  2022-07-04 20:45:00  19758.5  19809.2  19745.7  19774.4   2972.344\n",
+       "3  2022-07-04 21:00:00  19774.3  19790.0  19740.4  19789.9   3271.586\n",
+       "4  2022-07-04 21:15:00  19789.9  19811.4  19768.3  19773.8   2151.420\n",
+       "5  2022-07-04 21:30:00  19773.8  19979.7  19768.0  19870.9   6511.104\n",
+       "6  2022-07-04 21:45:00  19870.9  20033.0  19870.3  19946.7   5781.626\n",
+       "7  2022-07-04 22:00:00  19946.7  19960.3  19865.5  19873.6   5024.952\n",
+       "8  2022-07-04 22:15:00  19873.7  19970.0  19863.3  19943.1   3689.065\n",
+       "9  2022-07-04 22:30:00  19943.2  20100.0  19926.4  20016.5  10324.172"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "btcusdt_15min_data = pd.read_csv(\"BTCUSDT_3min.csv\")\n",
+    "btcusdt_15min_data = pd.read_csv(\"BTCUSDT_15min.csv\")\n",
     "btcusdt_15min_df = pd.DataFrame(btcusdt_15min_data)\n",
-    "btcusdt_15min_df.tail()"
+    "btcusdt_15min_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a53364",
+   "metadata": {},
+   "source": [
+    "Checking for bullish pin bars on 15 minutes bars of BTCUSDT Futures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8e083e6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "timestamp",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "open",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "high",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "low",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "close",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "volume",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "bullish_pin_bar",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "c44b5785-a256-456b-b63e-816c641c04ca",
+       "rows": [
+        [
+         "0",
+         "2022-07-04 20:15:00",
+         "19851.3",
+         "19853.6",
+         "19719.5",
+         "19776.6",
+         "4522.198",
+         "False"
+        ],
+        [
+         "1",
+         "2022-07-04 20:30:00",
+         "19776.7",
+         "19779.3",
+         "19735.5",
+         "19758.5",
+         "2417.909",
+         "False"
+        ],
+        [
+         "2",
+         "2022-07-04 20:45:00",
+         "19758.5",
+         "19809.2",
+         "19745.7",
+         "19774.4",
+         "2972.344",
+         "False"
+        ],
+        [
+         "3",
+         "2022-07-04 21:00:00",
+         "19774.3",
+         "19790.0",
+         "19740.4",
+         "19789.9",
+         "3271.586",
+         "True"
+        ],
+        [
+         "4",
+         "2022-07-04 21:15:00",
+         "19789.9",
+         "19811.4",
+         "19768.3",
+         "19773.8",
+         "2151.42",
+         "False"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>bullish_pin_bar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-07-04 20:15:00</td>\n",
+       "      <td>19851.3</td>\n",
+       "      <td>19853.6</td>\n",
+       "      <td>19719.5</td>\n",
+       "      <td>19776.6</td>\n",
+       "      <td>4522.198</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-07-04 20:30:00</td>\n",
+       "      <td>19776.7</td>\n",
+       "      <td>19779.3</td>\n",
+       "      <td>19735.5</td>\n",
+       "      <td>19758.5</td>\n",
+       "      <td>2417.909</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-07-04 20:45:00</td>\n",
+       "      <td>19758.5</td>\n",
+       "      <td>19809.2</td>\n",
+       "      <td>19745.7</td>\n",
+       "      <td>19774.4</td>\n",
+       "      <td>2972.344</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-07-04 21:00:00</td>\n",
+       "      <td>19774.3</td>\n",
+       "      <td>19790.0</td>\n",
+       "      <td>19740.4</td>\n",
+       "      <td>19789.9</td>\n",
+       "      <td>3271.586</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-07-04 21:15:00</td>\n",
+       "      <td>19789.9</td>\n",
+       "      <td>19811.4</td>\n",
+       "      <td>19768.3</td>\n",
+       "      <td>19773.8</td>\n",
+       "      <td>2151.420</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             timestamp     open     high      low    close    volume  \\\n",
+       "0  2022-07-04 20:15:00  19851.3  19853.6  19719.5  19776.6  4522.198   \n",
+       "1  2022-07-04 20:30:00  19776.7  19779.3  19735.5  19758.5  2417.909   \n",
+       "2  2022-07-04 20:45:00  19758.5  19809.2  19745.7  19774.4  2972.344   \n",
+       "3  2022-07-04 21:00:00  19774.3  19790.0  19740.4  19789.9  3271.586   \n",
+       "4  2022-07-04 21:15:00  19789.9  19811.4  19768.3  19773.8  2151.420   \n",
+       "\n",
+       "   bullish_pin_bar  \n",
+       "0            False  \n",
+       "1            False  \n",
+       "2            False  \n",
+       "3             True  \n",
+       "4            False  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Defining function to identify bullish pin bars\n",
+    "def is_bullish_pin_bar(row):\n",
+    "    o_price = row['open']\n",
+    "    h_price = row['high']\n",
+    "    l_price = row['low']\n",
+    "    c_price = row['close']\n",
+    "\n",
+    "    body = abs(c_price - o_price)\n",
+    "    upper_wick = h_price - max(c_price, o_price)\n",
+    "    lower_wick = min(o_price, c_price) - l_price\n",
+    "    price_range = h_price - l_price\n",
+    "    body_ratio = body/price_range\n",
+    "\n",
+    "    if(c_price >= o_price and price_range > 0):\n",
+    "        if(upper_wick < lower_wick and body_ratio < 0.5):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    return False\n",
+    "\n",
+    "btcusdt_15min_df['bullish_pin_bar'] = btcusdt_15min_df.apply(is_bullish_pin_bar, axis=1)\n",
+    "btcusdt_15min_df.head()"
+   ]
   }
  ],
  "metadata": {
